Ajout de CommonJS et publication NPM

--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
         <meta charset="utf-8">
         <title>JSYG tests</title>
         
-        <link rel="stylesheet" href="bower_components/qunit/qunit/qunit.css">
-        <link rel="stylesheet" href="bower_components/jsyg-selection/JSYG.Selection.css">
+        <link rel="stylesheet" href="node_modules/jsyg-selection/JSYG.Selection.css">
         <link rel="stylesheet" href="JSYG.BoundingBox.css">
         
-        <script src="bower_components/qunit/qunit/qunit.js"></script>
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/jQuery.Hotkeys/jquery.hotkeys.js"></script>
-        <script src="bower_components/jsyg/JSYG.js"></script>
-        <script src="bower_components/jsyg-path/JSYG.Path.js"></script>
-        <script src="bower_components/jsyg-resizable/JSYG.Resizable.js"></script>
-        <script src="bower_components/jsyg-selection/JSYG.Selection.js"></script>
+        <script src="node_modules/jquery/dist/jquery.js"></script>
+        <script src="node_modules/jquery.hotkeys/jquery.hotkeys.js"></script>
+        <script src="node_modules/jsyg/dist/JSYG.js"></script>
+        <script src="node_modules/pathseg/pathseg.js"></script>
+        <script src="node_modules/jsyg-path/JSYG.Path.js"></script>
+        <script src="node_modules/jsyg-resizable/JSYG.Resizable.js"></script>
+        <script src="node_modules/jsyg-selection/JSYG.Selection.js"></script>
         <script src="JSYG.BoundingBox.js"></script>
         <style>
             .item {
